<resources>
    <string name="app_name">ExampleShop</string>
    <string name="field_email">E-mail</string>
    <string name="field_login">Логин</string>
    <string name="field_user_name">Имя пользователя</string>
    <string name="field_password">Пароль</string>
    <string name="action_create_account">Создать учетную запись</string>
    <string name="action_sign_in">Вход</string>
    <string name="field_is_empty">заполните поле</string>
    <string name="invalid_email_or_password">Неверный логин или пароль</string>
    <string name="account_already_exists">Учетная запись уже существует</string>
    <string name="sign_up_success">Вы создали новую учетную запись. Теперь вы можете войти с его помощью в систему.</string>
    <string name="field_repeat_password">Повторите пароль</string>
    <string name="password_mismatch">Несоответствие пароля</string>
    <string name="add_product">Добавить товар</string>
    <string name="name_product">Название продукта</string>
    <string name="description_product">Описание продукта</string>
    <string name="price_product">Цена</string>
    <string name="add_product_btn">Добавить Товар</string>

    <string name="action_try_again">Обновить</string>
    <string name="auth_error">Срок действия сеанса пользователя истек</string>
    <string name="connection_error">Не удается подключиться к серверу</string>
    <string name="internal_error">Внутренняя ошибка! Пожалуйста, попробуйте еще раз позже.</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_list">Список продуктов</string>
    <string name="profile">Аккаунт</string>
    <string name="action_edit_profile">Редактировать профиль</string>
    <string name="action_logout">Выход из аккаунта</string>
    <string name="edit_profile_description">Прямо сейчас вы можете редактировать только имя пользователя</string>
    <string name="action_save">Сохранить</string>
    <string name="action_cancel">Отмена</string>
    <string name="add_search_product">Введти название товара</string>
    <string name="tab_catalog">Каталог</string>
    <string name="tab_profile">Профиль</string>
</resources>