<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.screens.main.tabs.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editProfileButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/emailHintTextView"
            style="@style/ProfileHintTextView"
            android:text="@string/field_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/usernameHintTextView"
            style="@style/ProfileHintTextView"
            android:text="@string/field_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/emailHintTextView"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/startBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="emailHintTextView,usernameHintTextView"/>

        <TextView
            android:id="@+id/emailTextView"
            style="@style/ProfileValueTextView"
            tools:text="test@test.test"
            app:layout_constraintStart_toStartOf="@id/startBarrier"
            app:layout_constraintTop_toTopOf="@id/emailHintTextView"/>

        <TextView
            android:id="@+id/usernameTextView"
            style="@style/ProfileValueTextView"
            tools:text="admin"
            app:layout_constraintStart_toStartOf="@id/startBarrier"
            app:layout_constraintTop_toTopOf="@id/usernameHintTextView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/editProfileButton"
        style="@style/GlobalTextInputStyle.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataContainer"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/action_edit_profile"/>

    <Button
        android:id="@+id/logoutButton"
        style="@style/GlobalTextInputStyle.Secondary.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfileButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/action_logout"/>

        <com.example.exampleshop.app.view.ResultView
            android:id="@+id/resultView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>